[gd_scene load_steps=34 format=2]

[ext_resource path="res://Player/Camera2D.gd" type="Script" id=1]
[ext_resource path="res://LevelsMainMenu/Tranistion/Transition-0030.png" type="Texture" id=2]
[ext_resource path="res://LevelsMainMenu/Tranistion/Transition-0023.png" type="Texture" id=3]
[ext_resource path="res://LevelsMainMenu/Tranistion/Transition-0029.png" type="Texture" id=4]
[ext_resource path="res://LevelsMainMenu/Tranistion/Transition-0026.png" type="Texture" id=5]
[ext_resource path="res://LevelsMainMenu/Tranistion/Transition-0024.png" type="Texture" id=6]
[ext_resource path="res://LevelsMainMenu/Tranistion/Transition-0028.png" type="Texture" id=7]
[ext_resource path="res://LevelsMainMenu/Tranistion/Transition-0025.png" type="Texture" id=8]
[ext_resource path="res://LevelsMainMenu/Tranistion/Transition-0027.png" type="Texture" id=9]
[ext_resource path="res://LevelsMainMenu/Tranistion/Transition-0001.png" type="Texture" id=10]
[ext_resource path="res://LevelsMainMenu/Tranistion/Transition-0002.png" type="Texture" id=11]
[ext_resource path="res://LevelsMainMenu/Tranistion/Transition-0003.png" type="Texture" id=12]
[ext_resource path="res://LevelsMainMenu/Tranistion/Transition-0006.png" type="Texture" id=13]
[ext_resource path="res://LevelsMainMenu/Tranistion/Transition-0007.png" type="Texture" id=14]
[ext_resource path="res://LevelsMainMenu/Tranistion/Transition-0004.png" type="Texture" id=15]
[ext_resource path="res://LevelsMainMenu/Tranistion/Transition-0005.png" type="Texture" id=16]
[ext_resource path="res://LevelsMainMenu/Tranistion/Transition-0008.png" type="Texture" id=17]
[ext_resource path="res://LevelsMainMenu/Tranistion/Transition-0009.png" type="Texture" id=18]
[ext_resource path="res://LevelsMainMenu/Tranistion/Transition-0010.png" type="Texture" id=19]
[ext_resource path="res://LevelsMainMenu/Tranistion/Transition-0011.png" type="Texture" id=20]
[ext_resource path="res://LevelsMainMenu/Tranistion/Transition-0012.png" type="Texture" id=21]
[ext_resource path="res://LevelsMainMenu/Tranistion/Transition-0013.png" type="Texture" id=22]
[ext_resource path="res://LevelsMainMenu/Tranistion/Transition-0014.png" type="Texture" id=23]
[ext_resource path="res://LevelsMainMenu/Tranistion/Transition-0015.png" type="Texture" id=24]
[ext_resource path="res://LevelsMainMenu/Tranistion/Transition-0016.png" type="Texture" id=25]
[ext_resource path="res://LevelsMainMenu/Tranistion/Transition-0021.png" type="Texture" id=26]
[ext_resource path="res://LevelsMainMenu/Tranistion/Transition-0020.png" type="Texture" id=27]
[ext_resource path="res://LevelsMainMenu/Tranistion/Transition-0022.png" type="Texture" id=28]
[ext_resource path="res://LevelsMainMenu/Tranistion/Transition-0019.png" type="Texture" id=29]
[ext_resource path="res://LevelsMainMenu/Tranistion/Transition-0017.png" type="Texture" id=30]
[ext_resource path="res://LevelsMainMenu/Tranistion/Transition-0018.png" type="Texture" id=31]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 30 ), ExtResource( 31 ), ExtResource( 29 ), ExtResource( 27 ), ExtResource( 26 ), ExtResource( 28 ), ExtResource( 3 ), ExtResource( 6 ), ExtResource( 8 ), ExtResource( 5 ), ExtResource( 9 ), ExtResource( 7 ), ExtResource( 4 ), ExtResource( 2 ) ],
"loop": false,
"name": "default",
"speed": 24.0
} ]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 4 ), ExtResource( 7 ), ExtResource( 9 ), ExtResource( 5 ), ExtResource( 8 ), ExtResource( 6 ), ExtResource( 3 ), ExtResource( 28 ), ExtResource( 26 ), ExtResource( 27 ), ExtResource( 29 ), ExtResource( 31 ), ExtResource( 30 ), ExtResource( 25 ), ExtResource( 24 ), ExtResource( 23 ), ExtResource( 22 ), ExtResource( 21 ), ExtResource( 20 ), ExtResource( 19 ), ExtResource( 18 ), ExtResource( 17 ), ExtResource( 14 ), ExtResource( 13 ), ExtResource( 16 ), ExtResource( 15 ), ExtResource( 12 ), ExtResource( 11 ), ExtResource( 10 ) ],
"loop": false,
"name": "default",
"speed": 24.0
} ]

[node name="Camera2D" type="Camera2D"]
position = Vector2( 520, 288 )
current = true
zoom = Vector2( 1.3, 1.3 )
smoothing_enabled = true
smoothing_speed = 2.0
script = ExtResource( 1 )

[node name="SceneEnd" type="AnimatedSprite" parent="."]
scale = Vector2( 1.30284, 1.30284 )
z_index = 100
frames = SubResource( 1 )

[node name="SceneStart" type="AnimatedSprite" parent="."]
scale = Vector2( 1.3031, 1.3031 )
z_index = 100
frames = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.2
autostart = true

[node name="StartTrans" type="Timer" parent="."]
wait_time = 1.6
autostart = true

[node name="ExitTrans" type="Timer" parent="."]
wait_time = 1.6
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="StartTrans" to="." method="_on_StartTrans_timeout"]
[connection signal="timeout" from="ExitTrans" to="." method="_on_ExitTrans_timeout"]
